# ml-api-fastapi-v2

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  .yamllint.yml  CORRECCION_IMPORTACIONES.md  IMPLEMENTACION_SOLID_CLEAN_CODE.md  IMPROVEMENT_PLAN.md  ISSUE-CALIDAD-VALIDACIONES.md  MEJORAS_CICLO7_IMPLEMENTADAS.md  MEJORAS_TDD_STUBS_IMPLEMENTADAS.md  MEJORAS_TDD_STUBS_OPTIMIZADAS.md  PIPELINE_HIBRIDO_CALIDAD.md  PR_CICLO7_INFO.md  README.md  RULES.md  TDD_QUALITY_AUDIT.md  TDD_REFACTORING_SUMMARY.md  TDD_STUB_PHILOSOPHY.md  TDD_STUB_PHILOSOPHY_OPTIMIZADA.md  TECHNICAL_DEBT.md  TODO.md  analyze_tech_debt.bat  configure_linting.ps1  docker-compose.yml  fix_flake8_errors.py  generate_pdf.py  install_dependencies.ps1  mypy.ini  pr_description.md  pyproject.toml  pytest.ini  refactor.bat  ruff.toml  setup.ps1  setup_tdd.bat  test_pipelines.ps1  test_pre_commit.ps1  validate_pipelines.ps1  (+1 more)
.github/: README.md
.github/workflows/: deploy_vps.yml  performance_test.yml  quality-pipeline.yml  quality_pipeline.yml  security_scan.yml
backend/: .pre-commit-config.yaml  Makefile  check_imports.py  pytest.ini
backend/app/: __init__.py  main.py
backend/app/api/: middleware.py
backend/app/api/v1/: api.py
backend/app/config/: __init__.py  environment.py  security_logger.py  security_validator.py  settings.py  settings_factory.py  validation_strategies.py
backend/app/core/: README_DATABASE.md  __init__.py  config.py  database.py  database_config.py  database_health.py  database_manager.py  database_repository.py  error_handler.py  health_monitor.py  logging.py  rate_limiter.py  retry_handler.py  security.py  security_logger.py  structured_logger.py
backend/app/models/: README.md  __init__.py  api_models.py  database.py  schemas.py  user.py
backend/app/services/: __init__.py  base_service.py  concrete_base_service.py  hybrid_prediction_service.py  model_management_service.py  prediction_service.py
backend/app/utils/: __init__.py  data_validators.py  error_handlers.py  exceptions.py  health.py  ml_model_validators.py  prediction_validators.py
backend/reports/tests/: report.html
backend/requirements/: base.txt  dev.txt  test.txt  websocket.txt
backend/scripts/: setup_test_db.py
backend/tests/: conftest.py  test_database_module.py
backend/tests/unit/: test_auth.py  test_core_modules.py  test_health.py  test_main_app.py  test_simple_health.py  test_tdd_api_integration.py  test_tdd_configuration.py  test_tdd_database_refactoring.py  test_tdd_error_handling.py  test_tdd_health.py  test_tdd_ml_model_validation.py  test_tdd_prediction_validation.py  test_tdd_services_cycle7.py
backend/tests/unit/test_models/: test_user_model.py
backend/tests/unit/test_services/: test_prediction_service.py
config/: development.env  production.env  testing.env
data/models/: README.md
docs/: AUTO_COMMIT_GUIDE.md  COMMIT_SYSTEM.md  GIT_BEST_PRACTICES.md  LINTING_CONFIGURATION.md  NAMING_CONVENTIONS.md
docs/database/: ANALISIS_MODULO_DB.md  REQUISITOS_DB.md
docs/issues/: ISSUE-001-SMART-COMMIT-BYPASS.md
frontend/web-app/: .prettierrc  package.json  tsconfig.json  vite.config.ts
frontend/web-app/src/: vite-env.d.ts
frontend/web-app/src/services/: api.ts
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.websocket
infrastructure/nginx/: nginx.conf
infrastructure/nginx/conf.d/: default.conf
infrastructure/scripts/: README_REFACTORING.md  auto_refactor.py  check_docstrings.py  check_env_vars.py  check_markdown.py  check_package_versions.py  check_standards.py  generate_dashboard.py  git_best_practices.py  progress_tracker.py  quick_quality_check.py  setup-precommit.sh  setup.sh  tdd_setup.py  tech_debt_analyzer.py
reports/: dashboard.html
reports/tests/: report.html
scripts/: auto_commit.ps1  commit.ps1  configure_ide.ps1  fix_powershell.ps1  quick_save.ps1  set_env.ps1  setup_quality_pipeline.ps1  simple_commands.ps1  simple_commands_clean.ps1  smart_commit_clean.ps1  smart_commit_fast.ps1  smart_commit_strict.ps1  smart_commit_tdd.ps1  vps_setup.sh
(+3 files in other folders)
